fix: fix display issues with wrapped test in footnote links

--- a/src/app/blogs/[slug]/mdx.css
+++ b/src/app/blogs/[slug]/mdx.css
@@ -464,5 +464,5 @@
 }
 
 .footnotes ol > li > p {
-  @apply inline-flex items-center;
+  @apply block;
 }
